--- a/platformio.ini
+++ b/platformio.ini
@@ -18,7 +18,7 @@
 [platformio]
 src_dir      = Marlin
 boards_dir   = buildroot/share/PlatformIO/boards
-default_envs = mega2560
+default_envs = STM32F103RC_btt_512K
 include_dir  = Marlin
 
 #
@@ -475,6 +475,7 @@ platform          = ${common_stm32f1.platform}
 extends           = env:STM32F103RC_btt
 board_upload.maximum_size=524288
 build_flags       = ${env:STM32F103RC_btt.build_flags} -DSTM32_FLASH_SIZE=512
+lib_deps          = Adafruit NeoPixel=https://github.com/CommandoreBombardiero/Adafruit_NeoPixel
 
 [env:STM32F103RC_btt_512K_USB]
 platform          = ${common_stm32f1.platform}
